@@ -1,5 +1,7 @@
 *SVN*
 
+* Document the supported options for sortable_element. Closes #8820 [berkelep]
+
 * Add examples in the documentation for various assertions. Closes #9938 [zapnap]
 
 * When a NonInferrableControllerError is raised, make the proposed fix clearer in the error message. Closes #10199 [danger]
